# fast-auth

./: Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml
fast_auth/: app.py  database.py  models.py  schemas.py  views.py
migrations/: env.py
migrations/versions/: 2609048a8ada_create_user_table.py
tests/: conftest.py
tests/api/: test_delete.py  test_get.py  test_post.py
tests/infra/: test_db.py
